# ragkit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ragkit/: __init__.py  api.py  cli.py  config.py  embeddings.py  engine.py  llm.py  loaders.py  store.py
samples/: company_handbook.md
tests/: test_chunking.py  test_engine.py  test_store.py
